jekyll set, about and contact content changed

--- a/about.html
+++ b/about.html
@@ -1,12 +1,22 @@
 ---
 layout: page
 title: "About"
-description: "This is what I do."
+description: "This is what we do."
 header-img: "img/about-bg.jpg"
 ---
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
+<p>
+Welcome to one of the biggest and exclusive clubs of IIT Bombay. Web n Coding Club houses the most talented and genius computer geeks in the institute. If you see 1's and 0's crawling the walls; if you see algorithms flowing around; if you find coding fun, then you have steered towards the right port. Don't fret even if you don't. It is now our responsibility at WnCC to make you ambient with codes and algorithms, all in exchange for your attention.
+</p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
+<p>
+Your journey with WnCC will begin with workshops, hands-on sessions and competitions. We learn coding skills and then compete with best brains in the institute-this prepares you for various international coding championships like ACM-ICPC and Google Code Jam. If you are a beginner, then don't be afraid because we are a learning community. You will get a chance to learn from your seniors and friends. In case of any doubts, you can contact us on any of our social media terminals including but not limited to a Google Group.
+</p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum molestiae debitis nobis, quod sapiente qui voluptatum, placeat magni repudiandae accusantium fugit quas labore non rerum possimus, corrupti enim modi! Et.</p>
+<p>
+Some of our workshops held last fall covered Android-SDK, Python, PHP, Perl, Bash and much more. We have done lectures on SEO, networking etc. We also organize Hack-Nights and Code-JAM where you can try out real coding challenges.
+</p>
+
+<p>
+We are not just limited to coding stuff nor as geeky as we pride ourselves to be. You are invited to our club parties where you display your exclusive work while munching on some french fries.
+</p>
