--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "A Clean Blog Theme by Start Bootstrap"
+description: "Web and Coding Club, IIT Bombay"
 ---
 
 {% for post in paginator.posts %}
