music scraper by Kalpesh

--- a/resources.html
+++ b/resources.html
@@ -14,10 +14,11 @@ header-img: "img/resources-bg.jpg"
   <tbody>
     <tr> <td><a href = "/IIT-Timetable" target = "_blank">IIT-Timetable</a></td> <td>Manish Goregaonkar, Kumar Ayush</td> <td><a href = "https://github.com/Manishearth/IIT-Timetable" target = "_blank">git</a></td> </tr>
     <tr> <td>3dwrite</td> <td>Meet Udeshi</td> <td><a href = "https://github.com/udiboy1209/3dwrite" target = "_blank">git</a></td> </tr>
+    <tr> <td>Chat Server</td> <td>Kalpesh Krishna</td> <td><a href = "https://github.com/martiansideofthemoon/Node-JS-Chat-Server" target = "_blank">git</a></td> </tr>
     <tr>
-      <td>Chat Server</td>
+      <td>Music Scraper</td>
       <td>Kalpesh Krishna</td>
-      <td><a href = "https://github.com/martiansideofthemoon/Node-JS-Chat-Server" target = "_blank">git</a></td>
+      <td><a href = "https://github.com/martiansideofthemoon/Music-Scrapers" target = "_blank">git</a></td>
     </tr>
   </tbody>
 </table>
