--- a/resources.html
+++ b/resources.html
@@ -20,5 +20,10 @@ header-img: "img/resources-bg.jpg"
       <td>Kalpesh Krishna</td>
       <td><a href = "https://github.com/martiansideofthemoon/Music-Scrapers" target = "_blank">git</a></td>
     </tr>
+    <tr>
+      <td>Youtuber</td>
+      <td>Srajan Garg</td>
+      <td><a href = "/youtuber/">Youtuber</a></td>
+    </tr>
   </tbody>
 </table>
